Fixed overlapping of coins

--- a/snakes_n_ladders-roopam/styles.css
+++ b/snakes_n_ladders-roopam/styles.css
@@ -43,7 +43,7 @@ img {
 
 .box {
     display: flex;
-    justify-content: space-between;
+    justify-content: center;
     align-items: center;
 }
 
@@ -55,12 +55,42 @@ img {
     opacity: 90%;
 }
 
-.cir_both {
-    width: 50%;
-    height: 50%;
+.yellow_in {
+    width: 100%;
+    height: 100%;
+    border-radius: 100%;
+    opacity: 90%;
+    position: relative;
+    right: 20%;
+}
+
+.blue_out {
+    width: 100%;
+    height: 100%;
     transform: scale(0.6);
     border-radius: 100%;
     opacity: 90%;
+    position: relative;
+    left: 10%;
+}
+
+.yellow_out {
+    width: 100%;
+    height: 100%;
+    transform: scale(0.6);
+    border-radius: 100%;
+    opacity: 90%;
+    position: relative;
+    right: 10%;
+}
+
+.blue_in {
+    width: 100%;
+    height: 100%;
+    border-radius: 100%;
+    opacity: 90%;
+    position: relative;
+    left: 20%;
 }
 
 .dice {
